# ResearchProject

./: README.md  main.py  pyproject.toml
annotated_broccoli_datasets/raw/: 07-11-segment10_camera1_slot_0_frame_0000.txt  07-11-segment10_camera1_slot_15_frame_0518.txt  07-11-segment10_camera1_slot_16_frame_0546.txt  07-11-segment10_camera2_slot_27_frame_0956.txt  07-11-segment2_camera1_slot_16_frame_0246.txt  07-11-segment4_camera2_slot_29_frame_0636.txt  07-11-segment6_camera1_slot_16_frame_0344.txt  07-11-segment6_camera2_slot_28_frame_0621.txt  07-11-segment7_camera2_slot_23_frame_0499.txt  07-11-segment7_camera2_slot_27_frame_0603.txt  07-11-segment8_camera1_slot_15_frame_0300.txt  07-11-segment8_camera1_slot_25_frame_0619.txt  07-11-segment8_camera1_slot_5_frame_0103.txt  07-11-segment8_camera2_slot_12_frame_0261.txt  07-11-segment8_camera2_slot_21_frame_0518.txt  07-11-segment9_camera1_slot_25_frame_0763.txt  07-11-segment9_camera1_slot_4_frame_0112.txt  07-11-segment9_camera2_slot_6_frame_0147.txt  07-11-segment9_camera2_slot_8_frame_0201.txt  07-14-segment10_camera1_slot_16_frame_0352.txt  07-14-segment10_camera1_slot_21_frame_0472.txt  07-14-segment10_camera1_slot_5_frame_0109.txt  07-14-segment10_camera2_slot_16_frame_0345.txt  07-14-segment10_camera2_slot_17_frame_0361.txt  07-14-segment10_camera2_slot_18_frame_0392.txt  07-14-segment10_camera2_slot_24_frame_0539.txt  07-14-segment10_camera2_slot_3_frame_0053.txt  07-14-segment10_camera2_slot_5_frame_0098.txt  (+366 more)
src/: dataset.py  evaluate_subsets.py  preprocess.py  train.py  visualize.py  visualize_subsets.py
(+2 files in other folders)
