[project]
name = "researchproject"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ultralytics>=8.3.0",
    "scikit-learn>=1.5",
    "opencv-python>=4.10",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "torch>=2.4",
    "torchvision>=0.19",
    "pywavelets>=1.6",
]

[tool.uv]
prerelease = "allow"
environments = ["sys_platform == 'win32'"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true
